fix: double-tap on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -83,6 +83,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   cursor: pointer;
+  touch-action: manipulation;
   transition:
     background var(--transition-duration) ease,
     transform var(--transition-duration) ease,
